# haskell-stepik

./: CHANGELOG.md  haskell-stepik.cabal
src/: N1_Intro.hs  N2_Basics.hs  N3_Lists.hs  N4_DataTypes.hs  N5_Monads.hs
src/Part_1/: N1_Intro.hs  N2_Basics.hs  N3_Lists.hs  N4_DataTypes.hs  N5_Monads.hs
src/Part_2/: N1_Applicative.hs
