cabal-version:      2.4
name:               haskell-stepik
version:            0.1.0.0

author:             Dzmitry Liancheuski
maintainer:         dima.lenchevskii@gmail.com

extra-source-files: CHANGELOG.md

common language
  build-depends:
    , base
    , time

  default-language: Haskell2010

library
  import:          language
  exposed-modules:
      N1_Intro
    , N2_Basics
    , N3_Lists
    , N4_DataTypes

  hs-source-dirs:  src

executable haskell-stepik
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010