cabal-version:      2.4
name:               haskell-stepik
version:            0.1.0.0

author:             Dzmitry Liancheuski
maintainer:         dima.lenchevskii@gmail.com

extra-source-files: CHANGELOG.md

common language
  build-depends:
    , base
    , time
    , directory
    , mtl

  default-language: Haskell2010

library
  import:          language
  exposed-modules:
      Part_1.N1_Intro
    , Part_1.N2_Basics
    , Part_1.N3_Lists
    , Part_1.N4_DataTypes
    , Part_2.N1_Applicative

  hs-source-dirs:  src

executable haskell-stepik
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010